
----------------------------------------------------------------------
 2.6.2 - dd/Jul/2006
----------------------------------------------------------------------

 - Made "/server freenode" send auto-join channels but not
   "/server irc://freenode".
 - Fixed building of xchat-text (although not recommended!).
 - Fixed using Strip mIRC colors & Color nicks at the same time.


----------------------------------------------------------------------
 2.6.1 - 06/Jan/2006
----------------------------------------------------------------------

 - Updated translations (de, el, fi, fr, gl, hu, ko, nl, pa, sq, vi).
 - Added support for log rotation based on time or date.
 - Double-click in tree layout will now expand/collapse (Lian Wan Situ).
 - Keys to move tabs around now work in Tree layout too (Lian Wan Situ/Me).
 - Largely re-written "Search Text" function with much better
   behaviour and match case on/off and search backwards options 
   (Richard Hitt and Me).
 - The parent row in the tree layout now changes color if you have
   that group collapsed (Lian Wan Situ).
 - Fixed crash when trying to Detach or Close a utility tab via
   right-click, when it's not the currently focused tab.
 - Made DCC resume handle case-insensitive file systems properly.
 - Fixed the flashing when you click on a colored treeview row.
 - Fixed auto-completion during /exec -o [1375530].
 - Added "Join Channel" menu item to the Server menu.
 - Unshade the Disconnect menu item when a connection is in progress.
 - Fixed a possible crash in changing color settings before changing
   to/from the tree layout (SF bug #1349088).
 - Added "Auto accept file offers" to the File Transfer settings.
 - Added support for brackets "<>" around nicknames in cut and paste,
   without displaying them (hidden text) (Camillo Lugaresi).
 - Fixed opening URL irc://NetWork/#channel not joining the channel
   [1362155].
 - Fixed the nickname label becoming small when you're marked Back